[tool.poetry]
name = "orchestrate"
version = "0.1.0"
description = ""
authors = ["Kay Hoogland <kayhoogland@hey.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^0.14"
dagster-dbt = "^0.14.3"
dbt-sqlite = "^1.0.0"
dagit = "^0.14.3"

[tool.poetry.dev-dependencies]
ipython = "^8.1.1"
isort = "^5.10.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
